@@ -61,7 +61,7 @@ void xmpp_jid_free (Xmpp_JID * jid);
  * @param jid: The jid used to get the bar jid
  * @return the jid bare, you should free the memory
  */
-char * xmpp_jid_get_bare (Xmpp_JID * jid);
+char * xmpp_jid_get_bar (Xmpp_JID * jid);
 
 
 /**
